force-app/main/default/objects/Currency_Exchange_Rate__c/Currency_Exchange_Rate__c.object-meta.xml
<CustomObject>
    <description>Holds historical Currency exchange rates or currency convertions</description>
    <label>Currency Exchange Rate</label>
    <nameField>
        <displayFormat>CER-{000000000}</displayFormat>
        <label>Exchange Rate Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Currency Exchange Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>