force-app/main/default/objects/Currency_Exchange_Rate__c/fields/Base_Currency__c.field-meta.xml
<CustomField>
    <fullName>Base_Currency__c</fullName>
    <label>Base Currency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>CAN</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
            <value>
                <fullName>MXN</fullName>
            </value>
            <value>
                <fullName>CYN</fullName>
            </value>
            <value>
                <fullName>JPY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>