force-app/main/default/objects/Currency_Exchange_Rate__c/fields/Two_Decimals_Value__c.field-meta.xml
<CustomField>
    <fullName>Two_Decimals_Value__c</fullName>
    <formula>TRUNC(Rate__c ,2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Two Decimals Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>